// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Portfolio > should render connected view correctly 1`] = `
<div>
  <span
    class=""
    style="display: contents;"
  >
    <div
      data-banner-visible="true"
      data-testid="portfolio-page-inner"
    >
      Portfolio Page Inner Mock
    </div>
    <div
      style="display: contents;"
    />
  </span>
</div>
`;

exports[`Portfolio > should render demo view correctly when user is not connected 1`] = `
<div>
  <span
    class=""
    style="display: contents;"
  >
    <div
      data-banner-visible="true"
      data-mb="160"
      data-testid="portfolio-page-inner"
    >
      Portfolio Page Inner Mock
    </div>
    <div
      style="display: contents;"
    />
  </span>
</div>
`;
